# ParMETIS

./: CMakeLists.txt
conf/: gkbuild.cmake
libparmetis/: CMakeLists.txt
programs/: CMakeLists.txt
